--- a/src/components/TodoForm.css
+++ b/src/components/TodoForm.css
@@ -1,3 +1,7 @@
+form {
+    max-width: 500px;
+}
+
 input[type="text"] {
     background-color: white;
     /* flex-grow: 2;
@@ -8,9 +12,9 @@ input[type="text"] {
     margin: 10px;
     text-align: left;
     height: 20px;
-    color: grey;
+    color: black;
     border: black solid 1px;
-    width: 400px;
+    width: 380px;
 }
 
 input[type="submit"] {
